--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,9 +1,10 @@
 Package: DeadCanMove
 Type: Package
 Title: Assess how spatial roadkill patterns change with temporal sampling scheme
-Version: 0.3
+Version: 0.4
 Date: 2015-09-4
 Author: Barbosa A.M., Marques J.T., Santos S.M., Lourenco A., Medinas D., Beja P., Mira A.
 Maintainer: A. Marcia Barbosa <barbosa@uevora.pt>
-Description: From a baseline data frame of dead individuals recorded daily at different road stretches, simulate varying sub-sampling schemes, calculate roadkill hotspots based on each scheme, and compare hotspot patterns between sampling schemes and the baseline data.
+Suggests: carcass
+Description: From a baseline data frame of dead individuals recorded daily at different road stretches, simulate varying sub-sampling schemes, calculate and compare roadkill patterns and hotspots based on each sampling scheme.
 License: GPL-3
