added 'n.events.column' argument to 'hotspots' function
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/deadcanmove@26 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: DeadCanMove
 Type: Package
-Title: Assess how spatial roadkill patterns change with temporal sampling scheme
-Version: 0.4
-Date: 2015-09-4
+Title: Assess How Spatial Roadkill Patterns Change with Temporal Sampling Scheme
+Version: 0.5
+Date: 2017-03-28
 Author: Barbosa A.M., Marques J.T., Santos S.M., Lourenco A., Medinas D., Beja P., Mira A.
 Maintainer: A. Marcia Barbosa <barbosa@uevora.pt>
 Suggests: carcass
 Description: From a baseline data frame of dead individuals recorded daily at different road stretches, simulate varying sub-sampling schemes, calculate and compare roadkill patterns and hotspots based on each sampling scheme.
+Acknowledgements: We thank Bruno Silva and Manuel Spinola for improvement suggestions, and Almir Figueiredo for bug reporting.
 License: GPL-3
